--- a/DataMining1.ipynb
+++ b/DataMining1.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/georgiou12/DataMining1/blob/main/DataMining1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "Project 1 - Τεχνικές Εξόρυξης Δεδομένων - Παπαδόπουλος Χρήστος sdi2000165 - Ηλίας Γεωργίου sdi2000028"
       ],
@@ -13759,8 +13749,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
